Bogey power
- Trains now consume fuel from non-vault inventories to boost movement speed